fixing mobile header text align

--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ hr {
     }
 
     header h1 {
-        text-align: center;
+        text-align: left;
         font-size: 50px;
     }
 
